manifests/ingress-gateway/rhcl/gateway.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    istio-discovery: enabled
  
  name: ingress-gateway
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  labels:
    app: ingress-gateway
    kuadrant.io/gateway: "true"
  name: prod-gateway
  namespace: ingress-gateway
spec:
    gatewayClassName: istio
    listeners:
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.demo.leonlevy.lol"
      name: api
      port: 443
      protocol: HTTPS
      tls:
        certificateRefs:
        - group: ""
          kind: Secret
          name: api-prod-gateway-tls
        mode: Terminate
    - allowedRoutes:
        namespaces:
          from: All
      hostname: "*.demo.leonlevy.lol"
      name: http
      port: 80
      protocol: HTTP
